--- a/recipes/friedrice.html
+++ b/recipes/friedrice.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Fried rice</h1>
-    <img src="./img/friedrice.jpg" alt="Picture of fried rice" width="540" height="360">
-    <h2>Description</h2>
-    <p>A traditional Chinese meal, here is a simple recipe to whip up a plate of <em>delicious</em> fried rice!</p>
+    <h1 class="top friedrice">Fried rice</h1>
+    <div>
+        <img src="./img/friedrice.jpg" alt="Picture of fried rice" width="540" height="360">
+        <h2>Description</h2>
+        <p class="description">A traditional Chinese meal, here is a simple recipe to whip up a plate of <em>delicious</em> fried rice!</p>
+    </div>
     <h3>Ingredients</h3>
     <ul>
         <li>Rice</li>
@@ -25,6 +28,8 @@
         <li>Crack the eggs</li>
         <li>Stir-fry the ingredients together</li>
     </ol>
-    <a href="../index.html" rel="noopenner noreferrer">Go back</a>
+    <div>
+        <a href="../index.html" rel="noopenner noreferrer">Go back</a>
+    </div>
 </body>
 </html>
