--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
-    <img src="./img/lasagna.jpg" alt="Picture of lasagna" width="612" height="408">
-    <h2>Description</h2>
-    <p>If you want to emulate our favourite orange cat Garfield, here is a simple recipe to whip up a plate of <em>delicious</em> lasagna!</p>
+    <h1 class = "top lasagna">Lasagna</h1>
+    <div>
+        <img src="./img/lasagna.jpg" alt="Picture of lasagna" width="612" height="408">
+        <h2>Description</h2>
+        <p class="description">If you want to emulate our favourite orange cat Garfield, here is a simple recipe to whip up a plate of <em>delicious</em> lasagna!</p>
+    </div>
     <h3>Ingredients</h3>
     <ul>
         <li>Cheese filling</li>
@@ -24,6 +27,8 @@
         <li>Combine cheese mixture</li>
         <li>Layer and bake</li>
     </ol>
-    <a href="../index.html" rel="noopenner noreferrer">Go back</a>
+    <div>
+        <a href="../index.html" rel="noopenner noreferrer">Go back</a>
+    </div>
 </body>
 </html>
