--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css"> 
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="top">Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/lasagna.html" rel="noopenner noreferrer">Lasagna</a></li>
         <li><a href="./recipes/shiozake.html" rel="noopenner noreferrer">Shiozake</a></li>
