--- a/recipes/shiozake.html
+++ b/recipes/shiozake.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Shiozake</h1>
-    <img src="./img/shiozake.jpg" alt="Picture of shiozake" width="480" height="270">
-    <h2>Description</h2>
-    <p>A quick and simple meal for a light breakfast, here is a simple recipe to whip up a plate of <em>delicious</em> shiozake!</p>
+    <h1 class="top shiozake">Shiozake</h1>
+    <div>
+        <img src="./img/shiozake.jpg" alt="Picture of shiozake" width="480" height="270">
+        <h2>Description</h2>
+        <p class="description">A quick and simple meal for a light breakfast, here is a simple recipe to whip up a plate of <em>delicious</em> shiozake!</p>
+    </div>
     <h3>Ingredients</h3>
     <ul>
         <li>Salmon fillet</li>
@@ -22,6 +25,8 @@
         <li>Chill in freezer for 2 days</li>
         <li>Grill for 3 minutes</li>
     </ol>
-    <a href="../index.html" rel="noopenner noreferrer">Go back</a>
+    <div>
+        <a href="../index.html" rel="noopenner noreferrer">Go back</a>
+    </div>
 </body>
 </html>
